Added black background to index to reduce likelyhood of white flashes on load

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import Hero from "../components/Hero.astro";
 ---
 
 <MainLayout>
-    <div class="font-inter bg-cover bg-center bg-no-repeat bg-[url('/images/abs2.png')]">
+    <div class="bg-black font-inter bg-cover bg-center bg-no-repeat bg-[url('/images/abs2.png')]">
         <TopNav current="home"/>
         <Hero />
     </div>
