Oppdatert design og mobilmeny

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -2,9 +2,9 @@
 import NavButton from "./NavButton.astro";
 ---
 
-<section class="hero text-white flex justify-center items-center text-center">
+<section class="hero text-black flex justify-center items-center text-center">
     <div class="-translate-y-14">
-        <p class="text-slate-400">Welcome, I am a</p>
+        <p class="text-black">Welcome, I am a</p>
         <p class="text-6xl font-bold">Developer</p>
         <p class="mt-2 mb-8">I make stuff for the web.</p>
         <NavButton target="/projects" blank="false">See My Work</NavButton>
