--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -12,9 +12,9 @@
     />
 	
     <title>Espen Raugstad</title>
-  </head><slot />
-  <body>
-    
+  </head>
+  <body class="bg-neutral-100 font-inter">
+    <slot />
   </body>
 </html>
 
