--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -5,12 +5,12 @@ import NavButton from "../components/NavButton.astro";
 ---
 
 <MainLayout>
-  <div class="bg-black font-inter">
+  <div>
     <TopNav current="about" />
     <main
-      class="bg-black text-white hero flex flex-col items-center justify-center"
+      class=" hero flex flex-col items-center justify-center"
     >
-      <div class="-translate-y-14 flex flex-col items-center justify-center">
+      <div class="-translate-y-14 flex flex-col items-center justify-center px-8 sm:px-24">
             <h1 class="text-6xl font-black mb-4">About</h1>
             <p class="my-2">
             I am a physicist, an educator, and a multimedia technologist. I enjoy
