--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -5,10 +5,10 @@ import ProjectCard2 from "../components/ProjectCard2.astro";
 ---
 
 <MainLayout>
-    <div class="bg-black min-h-screen">
+    <div class="min-h-screen">
         <TopNav current="projects"/>
-        <main class="bg-black text-white flex flex-col items-center">
-            <h1 class="text-6xl font-black mt-2 mb-10">Projects</h1>
+        <main class="flex flex-col items-center">
+            <h1 class="text-6xl font-black mt-4 mb-10">Projects</h1>
             <section
             class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 grid-flow-row gap-4 mx-8 h-full"
           >
